Apply `--add-exports` to Java 16+ services based on manifest entries (#1215)
Apply `--add-exports` to Java 16+ services based on manifest entries